Coverity analysis defect 175530: Uninitialized pointer field

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-08-04
    • 1
    • 🟩 Routing and Topology
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /data/mci/7b5199136d945ea4e1751b7b3bd3d384/bazel_cache/658afbbc91b088dd7e554f8eea998579/execroot/_main/src/mongo/s/routing_context.h:136: UNINIT_CTOR 175530 Class member declaration for "_catalogCache".
      /data/mci/7b5199136d945ea4e1751b7b3bd3d384/bazel_cache/658afbbc91b088dd7e554f8eea998579/execroot/_main/src/mongo/s/routing_context.cpp:110: UNINIT_CTOR 175530 Non-static class member "_catalogCache" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Wolfee Farkas
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: