SERVER-107551 Coverity analysis defect 175530: Uninitialized pointer field (#38742)

GitOrigin-RevId: 3738740e60caa5cbee2fc473531a55115e3d3c92